# kd-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  state.rs
src/api/: mod.rs
src/application/: mod.rs  query.rs  update.rs
src/domain/: error.rs  mod.rs  model.rs  traits.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/network/: client.rs  http.rs  mod.rs
src/infrastructure/storage/: cache.rs  db.rs  mod.rs
src/interfaces/: cli.rs  mod.rs
src/interfaces/api/: mod.rs  translator.rs
src/migration/: legacy.rs  mod.rs
src/presentation/: mod.rs  theme.rs
tests/: clear_screen_tests.rs  config_tests.rs  emoji_tests.rs  frequency_alert_tests.rs  logging_tests.rs  pager_tests.rs
